...
                            .cornerRadius(30)
                            .shadow(color: .gray, radius: 1, x: 5, y: 5)
                        
                        Button(action: {
                            loginViewModel.authenticate { _ in }
                        }) {
                            Text("Sign in with Strava")
                                .frame(width: 280, height: 60)
                                .background(Color.blue)
                                .foregroundColor(.white)
                                .cornerRadius(10)
                        }
                        
                        #if DEBUG
                        Button(action: {
                            loginViewModel.insertTestData()
                        }) {
                            Text("Insert Test Data")
                                .frame(width: 280, height: 60)
                                .background(Color.green)
                                .foregroundColor(.white)
                                .cornerRadius(10)
                        }
                        #endif
...
